--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,7 +20,7 @@
             android:layout_marginStart="16dp"
             android:layout_marginTop="0dp"
             android:layout_marginEnd="16dp"
-            android:text="welcome to handcraft"
+            android:text="welcome to HandyCraft"
             android:textColor="@color/cardview_dark_background"
             android:textSize="30dp"
             app:layout_constraintEnd_toEndOf="parent"
@@ -64,7 +64,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="36dp"
             android:autoSizeMinTextSize="30dp"
-            android:text="please sign in "
+            android:text="Please sign in "
             android:textColor="@color/cardview_dark_background"
             android:textSize="22dp"
             app:layout_constraintEnd_toEndOf="@+id/textView2"
