created registration activity

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -79,6 +79,7 @@
             android:layout_marginTop="16dp"
             android:shadowColor="#009688"
             android:text="login"
+            android:onClick="loginUser"
             android:textColorHighlight="#009688"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.498"
@@ -109,6 +110,7 @@
             android:background="@null"
             android:textSize="16dp"
             android:text="sign up,it's free"
+            android:onClick="registerUser"
             app:layout_constraintBaseline_toBaselineOf="@+id/textView8"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
